aiir/test/Bytecode/invalid/invalid_attr_type_section.aiir
// This file contains various failure test cases related to the structure of
// the attribute/type offset section.

//===--------------------------------------------------------------------===//
// Index
//===--------------------------------------------------------------------===//

// RUN: not aiir-opt %S/invalid-attr_type_section-index.aiirbc -allow-unregistered-dialect 2>&1 | FileCheck %s --check-prefix=INDEX
// INDEX: invalid Attribute index: 3

//===--------------------------------------------------------------------===//
// Trailing Data
//===--------------------------------------------------------------------===//

// RUN: not aiir-opt %S/invalid-attr_type_section-trailing_data.aiirbc -allow-unregistered-dialect 2>&1 | FileCheck %s --check-prefix=TRAILING_DATA
// TRAILING_DATA: trailing characters found after Attribute assembly format: trailing
